--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
   {
     "matches": ["<all_urls>"],
-    "js": ["blocker.js"],
+    "js": ["jquery.js", "blocker.js"],
      "run_at": "document_start"
     }
   ],
